Bug 249386 - kmail crash when opening a message that contains only a calendar invitation
Summary: kmail crash when opening a message that contains only a calendar invitation
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: messageviewer (other bugs)
Version First Reported In: 1.13.5
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-29 07:53 UTC by avner
Modified: 2010-08-31 14:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
this message crashed kmail (2.12 KB, application/mbox)
2010-08-29 07:53 UTC, avner
Details
this patch solved the problem (419 bytes, patch)
2010-08-29 07:59 UTC, avner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description avner 2010-08-29 07:53:35 UTC
Created attachment 51074 [details]
this message crashed kmail

Version:           1.13.5 (using KDE 4.4.5) 
OS:                Linux

received the attached message.
clicked on it to open it in the preview area - kmail crashed.

I did not save the whole dump, but the lowest frame was at attachmentstrategy.cpp:151, that is: in HiddenAttachmentStrategy::defaultDisplay(), when trying to access node->parentNode()->type() .

I compiled from source, added some debug prints, and confirmed node->parentNode() == NULL.

Reproducible: Always
Comment 1 avner 2010-08-29 07:59:38 UTC
Created attachment 51075 [details]
this patch solved the problem

attached a straight forward solution patch.
I applied it today, and reinstalled the fixed package.
now kmail works for me, and the problematic message (and alike) is shown appropriately.

however, I don't know if this breaks something else. I have used the new version for 1 hour only since.
Comment 2 Laurent Montel 2010-08-31 14:37:48 UTC
SVN commit 1170280 by mlaurent:

Fix crash when header strategy is hidden
Apply patch from BR.

BUG: 249386


 M  +4 -0      attachmentstrategy.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170280
Comment 3 Laurent Montel 2010-08-31 14:48:32 UTC
SVN commit 1170288 by mlaurent:

Backport fix 249386
BUG: 249386


 M  +2 -0      attachmentstrategy.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170288