Fix crash when header strategy is hidden Apply patch from BR.

BUG: 249386

svn path=/branches/KDE/4.4/kdepim/; revision=1170280